fix header top gap for each page, and tidy up text in contact us

--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,6 +1,7 @@
 /* screen - about-us */
 
   .about-us {
+    padding-top: 4em;
     border: 1px none;
     mix-blend-mode: normal;
     position: relative;
