--- a/css/contact.css
+++ b/css/contact.css
@@ -142,8 +142,7 @@
 
 .contact .mk-business-centre {
   letter-spacing: 0;
-  line-height: 27px;
-  margin-left: 2px;
+  line-height: 28px;
   min-height: 80px;
   width: 262px;
 }
@@ -168,7 +167,7 @@
 
 .contact .monday-friday-700 {
   letter-spacing: 0;
-  line-height: 27px;
+  line-height: 28px;
   min-height: 108px;
 }
 
