--- a/css/find-jobs-landing.css
+++ b/css/find-jobs-landing.css
@@ -5,6 +5,7 @@
 }
 
 .find-jobs-landing {
+  padding-top: 4em;
   background-color: var(--neutral100);
   border: 1px none;
   display: flex;
